--- a/app_blog/templates/index.html
+++ b/app_blog/templates/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h2>Hello template</h2>
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+
+{% block title %}
+    Index Page
+{% endblock %}
+
+
+
+
+{% block content_title %}
+    Контент титул
+{% endblock %}
+
+
+
+
+
+{% block content %}
+    Hello, {{ n }}
+{% endblock %}
+
