--- a/app_blog/templates/index.html
+++ b/app_blog/templates/index.html
@@ -81,22 +81,22 @@
                     </th>
                 </tr>
             </thead>
-        {% for id, name, dept, birthday, zp in name %}
+        {% for Workers in name %}
             <tr>
                 <th>
-                    {{ id }} :
+                    {{ Workers.id }} :
                 </th>
                 <th>
-                    <input name="name" type="text" size="10" value={{ name }}>
+                    <input name="name" type="text" size="10" value= {{ Workers.fullname }} >
                 </th>
                 <th>
-                    <input name="dept" type="text" size="14" value={{ dept }}>
+                    <input name="dept" type="text" size="14" value={{ Workers.deptname }}>
                 </th>
                  <th>
-                    <input name="birthday" type="text" size="10" value={{ birthday }}>
+                    <input name="birthday" type="text" size="10" value={{ Workers.birthday }}>
                 </th>
                 <th>
-                    <input name="zp" type="text" size="7" value={{ zp }}>
+                    <input name="zp" type="text" size="7" value={{ Workers.salary }}>
                 </th>
                 <th>
                     <button type="button" class="btn btn-danger btn-sm">x</button>
