--- a/app_blog/templates/base.html
+++ b/app_blog/templates/base.html
@@ -28,8 +28,8 @@
 
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Найти" aria-label="Найти">
+        <form class="form-inline my-2 my-lg-0" method="get">
+            <input class="form-control mr-sm-2" type="search" placeholder="Найти" aria-label="Найти" name="q" value="{{ request.args.get('q', '') }}">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
         </form>
 
