--- a/app_blog/templates/index.html
+++ b/app_blog/templates/index.html
@@ -31,6 +31,9 @@
                     <th scope="col">
                         Название отдела:
                     </th>
+                    <th scope="col">
+                        Средняя зп
+                    </th>
                 </tr>
             </thead>
 
@@ -41,6 +44,10 @@
                 <td>
                     <!-- <input id="id" type="text" size="12" value="Administrators" > --> Administrators
                 </td>
+                 <td>
+                    <!-- <input id="id" type="text" size="12" value="Administrators" > --> 500
+
+                </td>
             </tr>
 
             <tr>
@@ -49,6 +56,9 @@
                 </td>
                 <td>
                     <!-- <input id="id" type="text" size="12" value="testers" > --> testers
+                </td>
+                <td>
+                    <!-- <input id="id" type="text" size="12" value="testers" > --> 300
                 </td>
             </tr>
     </table>
